@@ -1,0 +1,131 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-python</module>
+  <module-fancy>GStreamer Python bindings</module-fancy>
+  <name>This time I know our side will win.</name>
+  <version>0.10.8</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Python Bindings.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+  </features>
+
+  <applications>
+  </applications>
+
+    <contributors>
+	<person>Aidan Delaney</person>
+	<person>David Schleef</person>
+	<person>Edward Hervey</person>
+	<person>Jan Schmidt</person>
+	<person>Johan Dahlin</person>
+	<person>Michael Smith</person>
+	<person>Rene Stadler</person>
+	<person>Sebastien Merle</person>
+	<person>Stefan Kost</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Zaheer Abbas Merali</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <deprecations>
+    </deprecations>
+  </api>
+-->
+
+  
+
+  <bugs>
+    <bug>
+      <id>398567</id>
+      <summary>undefined symbol: libxml_xmlDocPtrWrap</summary>
+    </bug>
+    <bug>
+      <id>343980</id>
+      <summary>[solaris] import gst crash python</summary>
+    </bug>
+    <bug>
+      <id>363795</id>
+      <summary>Impossible to reset a pad to &quot; unnegotiated &quot; from Python</summary>
+    </bug>
+    <bug>
+      <id>380966</id>
+      <summary>Discoverer doesn't cope well with demuxers that don't cre...</summary>
+    </bug>
+    <bug>
+      <id>381243</id>
+      <summary>No checks are made when converting from gst.Fraction to G...</summary>
+    </bug>
+    <bug>
+      <id>385841</id>
+      <summary>Handle gchar** (GStrv) arguments</summary>
+    </bug>
+    <bug>
+      <id>410838</id>
+      <summary>gst-python doesn't handle gst.Buffers in GValues (e.g. in...</summary>
+    </bug>
+    <bug>
+      <id>418222</id>
+      <summary>New parameter to the discoverer to change the default max...</summary>
+    </bug>
+    <bug>
+      <id>432521</id>
+      <summary>[gst-discover] show audio and video length in ms</summary>
+    </bug>
+    <bug>
+      <id>433375</id>
+      <summary>[win32] autogenerated win32/common/config.h needed</summary>
+    </bug>
+    <bug>
+      <id>436620</id>
+      <summary>get_uri_type methods should return enum objects</summary>
+    </bug>
+    <bug>
+      <id>446674</id>
+      <summary>API break</summary>
+    </bug>
+    <bug>
+      <id>450117</id>
+      <summary>[PATCH] gst.event_new_custom needs to copy structure as C...</summary>
+    </bug>
+    <bug>
+      <id>451645</id>
+      <summary>gst.Buffer.stamp() is broked</summary>
+    </bug>
+    <bug>
+      <id>454259</id>
+      <summary>Requestable Pad Segfaults When No Name Is Supplied</summary>
+    </bug>
+    <bug>
+      <id>376996</id>
+      <summary>[PATCH] Fully implement GstPropertyProbe interface</summary>
+    </bug>
+    <bug>
+      <id>415003</id>
+      <summary>build warnings against python 2.5 on x86_64</summary>
+    </bug>
+    <bug>
+      <id>428299</id>
+      <summary>Allow python elements to implement pad queries</summary>
+    </bug>
+  </bugs>
+</release>
