@@ -1,3 +1,11 @@
+2007-08-01  Edward Hervey  <bilboed@bilboed.com>
+
+	* src/htdocs/entities.gst:
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gst-python/0.10.8.xml:
+	* src/htdocs/releases/gst-python/Makefile.am:
+	Releasing 0.10.8 of the Python Bindings.
+
 2007-07-17  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/htdocs/documentation/Makefile.am:
